// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GenerateCtrfReport > reporter params > minimal 1`] = `
[
  {
    "duration": undefined,
    "name": "some test",
    "status": "passed",
  },
  {
    "duration": undefined,
    "name": "a failed test",
    "status": "failed",
  },
]
`;

exports[`GenerateCtrfReport > test output > passed spec > passed suite 1`] = `
{
  "summary": {
    "failed": 0,
    "other": 0,
    "passed": 2,
    "pending": 0,
    "skipped": 0,
    "start": 0,
    "stop": 0,
    "tests": 2,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/foo/bar/suite0_passed.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "foo",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/foo/bar/suite0_passed.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "bar",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;

exports[`GenerateCtrfReport > test output > passed spec > passed suite with retry 1`] = `
{
  "summary": {
    "failed": 0,
    "other": 0,
    "passed": 1,
    "pending": 0,
    "skipped": 0,
    "start": 0,
    "stop": 0,
    "tests": 1,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/foo/bar/suite3_passed_test_retry.e2e.js",
      "flaky": true,
      "message": undefined,
      "name": "foo",
      "rawStatus": "passed",
      "retries": 1,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;

exports[`GenerateCtrfReport > test output > retry spec > first run - 1 passed, 2 failures, 0 flaky 1`] = `
{
  "summary": {
    "failed": 2,
    "other": 0,
    "passed": 1,
    "pending": 0,
    "skipped": 0,
    "start": 0,
    "stop": 0,
    "tests": 3,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "some test",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": false,
      "message": "expected foo to equal bar",
      "name": "a failed test",
      "rawStatus": "failed",
      "retries": 0,
      "start": 1753042662,
      "status": "failed",
      "stop": 0,
      "suite": undefined,
      "trace": "Failed test stack trace",
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": false,
      "message": "expected foo to equal bar",
      "name": "a failed test with no stack",
      "rawStatus": "failed",
      "retries": 0,
      "start": 1753042662,
      "status": "failed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;

exports[`GenerateCtrfReport > test output > retry spec > second run - 2 passed, 1 failure, 1 flaky 1`] = `
{
  "summary": {
    "failed": 1,
    "other": 0,
    "passed": 2,
    "pending": 0,
    "skipped": 0,
    "start": 0,
    "stop": 0,
    "tests": 3,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "some test",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": true,
      "message": undefined,
      "name": "a failed test",
      "rawStatus": "passed",
      "retries": 1,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": true,
      "message": "expected foo to equal bar",
      "name": "a failed test with no stack",
      "rawStatus": "failed",
      "retries": 1,
      "start": 1753042662,
      "status": "failed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;

exports[`GenerateCtrfReport > test output > retry spec > third run - 3 passes, 0 failures, 2 flaky 1`] = `
{
  "summary": {
    "failed": 0,
    "other": 0,
    "passed": 3,
    "pending": 0,
    "skipped": 0,
    "start": 0,
    "stop": 0,
    "tests": 3,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "some test",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": true,
      "message": undefined,
      "name": "a failed test",
      "rawStatus": "passed",
      "retries": 1,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/foo/suite1_failed.e2e.js",
      "flaky": true,
      "message": undefined,
      "name": "a failed test with no stack",
      "rawStatus": "passed",
      "retries": 2,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;

exports[`GenerateCtrfReport > test output > skipped test > suite with skippedTest 1`] = `
{
  "summary": {
    "failed": 0,
    "other": 0,
    "passed": 1,
    "pending": 0,
    "skipped": 1,
    "start": 0,
    "stop": 0,
    "tests": 2,
  },
  "tests": [
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/loo/suite2_skipped.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "foo bar baz",
      "rawStatus": "passed",
      "retries": 0,
      "start": 1753042662,
      "status": "passed",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
    {
      "browser": "",
      "duration": undefined,
      "filePath": "/bar/loo/suite2_skipped.e2e.js",
      "flaky": false,
      "message": undefined,
      "name": "a skipped test",
      "rawStatus": "skipped",
      "retries": 0,
      "start": 1753042662,
      "status": "skipped",
      "stop": 0,
      "suite": undefined,
      "trace": undefined,
      "type": "e2e",
    },
  ],
  "tool": {
    "name": "webdriverio",
  },
}
`;
